# cabal-uninstall

./: .gitignore  README.markdown  cabal-uninstall.cabal  cabal-uninstall.hs
