name:                     cabal-uninstall
version:                  0.1
cabal-version:            >= 1.2
stability:                alpha
description:              Very simple script to delete ca cabal package.
synopsis:                 Uninstall cabal packages
license:                  BSD3
author:                   Jan Christiansen
maintainer:               Jan Christiansen <christiansen@monoid-it.de>
category:                 Distribution
build-type:		  Simple
bug-reports:              https://github.com/plancalculus/cabal-uninstall/issues
source-repository head
  type:      git
  location:  https://github.com/plancalculus/cabal-uninstall.git

executable cabal-uninstall
  main-is:                  cabal-uninstall.hs
  build-depends:
    base,
    filepath,
    directory,
    process
